# gpulabs

lab1/: CMakeLists.txt
lab1/include/: matmul_shared.cuh
lab1/src/: main.cu  matmul_shared.cu
lab2/: .gitignore  CMakeLists.txt
lab2/include/: matmul_warp.cuh
lab2/src/: main.cu  matmul_warp.cu
lab3/: CMakeLists.txt
lab3/src/: flash_attention.cu  main.cu
